--- a/_posts/2025-09-19-omomuki.md
+++ b/_posts/2025-09-19-omomuki.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "baubles and tchotchkes"
+title: "Baubles and tchotchkes"
 sub-title: "reading the weather."
 date: 2025-09-19 16:00:00 +09
 permalink: "/omomuki/"
@@ -52,13 +52,13 @@ Walking up staircases out of train stations I am made privy to a surfeit of achi
 
 ### 八幡神社大祭
 
-On Sunday I bike in the evening again, out to 明大前, where I had taken the train earlier in the day. I drop down to 豪徳寺, from which it's easy to snake back along the 小田急線 to my home. On the west side of Tokyo streets abruptly begin and end, snaking in honor of buried rivers and drained rice paddies. The moon is low, yellow, and pregnant: the likely reason for the autumn festival. 神輿, hoisted on the shoulders of men and women, wander along the backstreets, portended by yells. An isolated patch of fireworks makes spitting noises from out at the horizon, and the blooms reflect in a tall glassy condominium complex. I run into three 神輿 on my loop and stop for two to pass------there is usually a man in front with a sash flanked by two lantern-bearers (young women). Earlier in the day I see a group of old men in colorful 法被 huddled around a 神輿, smoking. The oldest among them, with varicose noses, tend to stare openly around. Many day-drink. Many wear their 鉢巻 at increasingly jaunty angles, and it seems common to store various small goods inside one's coat at the level of one's stomach, supported by an external corded belt.
+On Sunday I bike in the evening again, out to 明大前, where I had taken the train earlier in the day. I drop down to 豪徳寺, from which it's easy to wend back along the 小田急線 to my home. On the west side of Tokyo streets abruptly begin and end, snaking in honor of buried rivers and drained rice paddies. The moon is low, yellow, and pregnant: the likely reason for the autumn festival. 神輿, hoisted on the shoulders of men and women, wander along the backstreets, portended by yells. An isolated patch of fireworks makes spitting noises from out at the horizon, and the blooms reflect in a tall glassy condominium complex. I run into three 神輿 on my loop and stop for two to pass------there is usually a man in front with a sash flanked by two lantern-bearers (young women). Earlier in the day I see a group of old men in colorful 法被 huddled around a 神輿, smoking. The oldest among them, with varicose noses, tend to stare openly around. Many day-drink. Many wear their 鉢巻 at increasingly jaunty angles, and it seems common to store various small goods inside one's coat at the level of one's stomach, supported by an external corded belt.
 
 ### roughage
 
 I read an article about William Volmann, who is dying of cancer. My first edition first printing of Infinite Jest can be identified by the blurb on the back from Volmann having only a single 'n.' He explains, in the interview, that he can barely drink anymore. The author seems to imply that magazines publish him only out of pity now, though it's not his writing that has changed. Some day if I am old, or riddled with metastases, I will lace the pages of 'Europe Central' with talmudically nested margin notes.
 
-Someone sends me photos of their new apartment in New Haven: single-paned leaded windows with soldered muntins, low American overgrowth. They bike a microwave from a craigslist post back to their room. A smiski, head in its hands, rests on a sill. I am told that the American Studies department at a university there is having trouble keeping unenrolled students out of psychoanalytic seminars. In a long interview online Harold Bloom decries the state of this same department, in the early 2000s, as having unwisely abandoned the literary canon. In a phone call with my sister weeks ago I am reminded again, as she has said often to impress that our father's roots are not as agrarian as his Iowan adolescence might imply, but bluer------his infancy passed in a New Haven apartment whose upstairs neighbor was Dr. Bloom himself, who I am told would occasionally babysit.
+Someone sends me photos of their new apartment in New Haven: single-paned leaded windows with soldered muntins, low American overgrowth. They bike a microwave from a craigslist post back to their room. A smiski, head in its hands, rests on a sill. I am told that the American Studies department at a university there is having trouble keeping unenrolled students out of psychoanalytic seminars. In a long interview online Harold Bloom decries the state of this same department, in the early 2000s, as having unwisely abandoned the literary canon. In a phone call with my sister weeks ago I am reminded again, as she has said often to impress that our father's roots are not as agrarian as his Iowan adolescence might imply, that his infancy passed in a New Haven apartment whose upstairs neighbor was Dr. Bloom himself, who I am told would occasionally babysit.
 
 ### sunfade
 
@@ -68,15 +68,15 @@ I go for a walk during my workday on Friday, toward 上野, which clusters aroun
 
 ### the lady in the radiator
 
-It feels like the last truly warm day (September 18). The atmosphere is slack. While I know from my phone that a storm is coming in the night, I think that it could have been possible, if I had trained myself, to intuit this from the sky's pallor, or some secrete and weak barometric organelle. This must be one of those senses that hominids have had to develop, out of necessity, over hundreds of thousands of years. It might manifest as a dull ache in the stomach of a sailor at morning, overlooking a becalmed but doomed sea.
+It feels like the last truly warm day (September 18). The atmosphere is slack. While I know from my phone that a storm is coming in the night, I think that it could have been possible, if I had trained myself, to intuit this from the sky's pallor, or some secret and weak barometric organelle. This must be one of those senses that hominids have had to develop, out of necessity, over hundreds of thousands of years. As in something that might have once manifested as a dull ache in the stomach of a scurvy-stricken sailor at morning, overlooking a becalmed but doomed sea.
 
-My senses yield only cramped, urban data. I can tell, from the top of the 千代田線 stairs at 根津駅, by the volume of air blowing up at me, whether I will make the train in time. It the speed of the air quickens as I stand, I can be leisurely, while if it is gentle and falling I need to take the stairs two at a time down the improper side to have a chance. I have twice thrown myself onto a train.
+My senses yield only cramped, urban data. I can tell, from the top of the 千代田線 stairs at 根津駅, by the volume of air blowing up at me, whether I will make the train. It the speed of the air quickens as I stand I can be leisurely, while if it is gentle and falling I need to take the stairs two at a time to have a chance. I have twice thrown myself into a train.
 
-In my room I watch *Eraserhead* on VHS; Jack Nance sits in shirtsleeves, making vigil over The Child, having set up a humidifier for it, which is letting off a tall white column of steam. On Jack's bedside table sits a small mound of dirt supporting a diminutive dead tree, which is never explained. Atop the dresser is another, larger mound of earth. I sit on my sheepskin, reclined against my futon and supported by various pillows shoved beneath my lumbar spine.
+In my room I watch *Eraserhead* on VHS; Jack Nance sits in shirtsleeves, making vigil over The Child, having fashioned a humidifier for it that is letting off a tall white column of steam. On Jack's bedside table sits a mound of dirt supporting a stunted dead tree that is never explained. Atop the dresser is another, larger pile of earth. I sit on my sheepskin, reclined against my futon and supported by various pillows shoved beneath my lumbar spine.
 
 I spent the day in my own neighborhood. I did laundry so that it could dry before the upcoming series of storms. I brewed 16 grams of coffee brought by a friend from 1369 Coffee House in Cambridge, MA, which has long since gone a little stale, and was roasted dark to begin with anyway, though I prefer its murk. It grinds with almost no resistance. The coffee cooled and I savored its flavorless tepidity while I futzed with application statements in the AM.
 
-A couple weeks ago I found an original CD for the *Eraserhead* soundtrack, which consists of two eighteen to twenty minute recordings of mostly ambient noise, clanking, static, distant vaudeville music, and snippets of the *lady in the radiator's* well-known song. I place the second track on my iPod Shuffle and work quietly through it some days, if it comes up.
+A couple weeks ago I found an original CD for the *Eraserhead* soundtrack, which consists of two eighteen-to-twenty minute recordings of mostly ambient noise, clanking, static, distant vaudeville music, and snippets of the *lady in the radiator's* well-known song. I place the second track on my iPod Shuffle and work quietly through it some days, if it comes up.
 
 As I write this Jack Nance makes out with his neighbor, a young woman with deep-set eyes and long dark ringletted hair, in a circular pool of milky water. Her focus is distracted by The Child whimpering in the corner. 微かな煙は風呂の上に漂っている。彼と彼女の輪郭が見えて、抱き続けて、お互いの唇を吸おうとする。急にラジエーターの中の女は歌を歌い始めます。小さな狭くて舞台で朽ちた葉っぱがない木が現れて、彼は首になって、頭が床に転んじゃう。
 
@@ -84,4 +84,4 @@ As I write this Jack Nance makes out with his neighbor, a young woman with deep-
 
 I wonder what sort of crisis could precipitate me writing consistently------could drive me to hermitage in Marfa, TX, or IA, or Western Mass, to pick away at some slim, devastating novel about incels and weebs. I pick up a copy of *The First Circle* from the box outside my local academic used bookstore. I spy an old Penguin collection of the poems of Rilke, which I do not permit myself to buy yet because I haven't started the Solzhenitsyn, nor finished 春の怖いもの. I am too comfortable with the idea that I am prevented by practicalities from trying to write in the embarrassing way of the men in Brooklyn who wear tattered blue moleskin French work jackets from the 1930s. It is possible the answer is to feel more shame, or to become the live-in lover of an heiress out of Vladivostok.
 
-As I watch, The Child's body is consumed by what appeared to be expanding foam, pouring from its viscera, just then opened by the scissors of Jack Nance. The Child's head expands to fill the whole room. Strobes. Screeches. The sound of open, ferocious, American wind. We cut to perhaps the most famous close-up in DL's œuvre: white particles swim behind Jack Nance's tall pompadour or bouffant. An unnamed man covered in boils or carbuncles grinds sparking base metal against a great wheel. The lady in the radiator, bathed in light, embraces Nance.
+As I watch, The Child's body is consumed by what appears to be expanding foam, pouring from its viscera just then opened by the scissors of Jack Nance. The Child's head expands to fill the whole room. Strobes. Screeches. The sound of open, ferocious, American wind. We cut to perhaps the most famous close-up in DL's œuvre: white particles swim behind Jack Nance's tall pompadour or bouffant. An unnamed man covered in boils or carbuncles grinds sparking base metal against a great roaring wheel of stone. The lady in the radiator, bathed in light, embraces Nance.
